export interface User {
  email: string;
  name: string;
  avatar: string | null;
}
